text-align fix

--- a/stylesheet/all.css
+++ b/stylesheet/all.css
@@ -13292,6 +13292,7 @@ body {
   padding: 1rem;
   transform: translateZ(0);
   line-height: 1.5;
+  text-align: justify;
 }
 #game p,
 #game-test p {
